--- a/src/components/CopyWidget/copyWidget.scss
+++ b/src/components/CopyWidget/copyWidget.scss
@@ -1,3 +1,8 @@
+@keyframes pulse-container {
+  0%, 100% { transform: scale(1); }
+  50% { transform: scale(1.025); }
+}
+
 .copyContainer {
   display: inline-block;
   padding: 8px 12px;
@@ -5,22 +10,35 @@
   text-decoration: none;
   z-index: 1;
   cursor: pointer;
+  animation: pulse-container 1s ease-in-out infinite;
 
   box-shadow: 0px 0px 3px 1px rgba(255, 255, 255, 0.1) inset;
   border-radius: 1px;
   border: 0px solid #335717;
   border-bottom-width: 2px;
 
+  &:hover {
+    animation-duration: 0.5s;
+  }
+
   .copyButton {
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
     height: 100%;
     font-size: calc(0.7rem + 0.7vw);
+
+    img {
+      position: relative;
+      top: 0;
+    }
 
     .divider {
       margin: 0 7px;
       border-left: 1px solid;
       border-color: rgba(0, 0, 0, 0.3);
+      height: 1em;
     }
 
     svg {
@@ -28,4 +46,18 @@
       width: calc(0.7rem + 0.7vw);
     }
   }
+}
+
+.copyLabel {
+  margin: 0 0 4px 0;
+  font-size: calc(0.5rem + 0.4vw);
+  font-weight: 600;
+  color: white;
+}
+
+.copyVersion {
+  margin: 2px 0 0 0;
+  font-size: calc(0.5rem + 0.3vw);
+  opacity: 0.8;
+  color: white;
 }
