--- a/src/components/MainBanner/mainBanner.scss
+++ b/src/components/MainBanner/mainBanner.scss
@@ -1,3 +1,14 @@
+@keyframes wobble {
+  0% { transform: rotate(0deg); }
+  15% { transform: rotate(0.75deg); }
+  30% { transform: rotate(-0.625deg); }
+  45% { transform: rotate(0.5deg); }
+  60% { transform: rotate(-0.375deg); }
+  75% { transform: rotate(0.25deg); }
+  90% { transform: rotate(-0.125deg); }
+  100% { transform: rotate(0deg); }
+}
+
 .mainBanner {
   width: 100%;
   height: 30vw;
@@ -28,6 +39,11 @@
 
     img {
       height: 100%;
+      cursor: pointer;
+
+      &:hover {
+        animation: wobble 0.6s ease-in-out;
+      }
     }
   }
 
@@ -40,6 +56,11 @@
 
     img {
       width: 100%;
+      cursor: pointer;
+
+      &:hover {
+        animation: wobble 0.6s ease-in-out;
+      }
     }
   }
 }
