--- a/src/pages/Guide/guide.scss
+++ b/src/pages/Guide/guide.scss
@@ -201,6 +201,8 @@
     display: flex;
     align-items: center;
     box-sizing: border-box;
+    position: relative;
+    z-index: 2;
 
     &:focus {
       outline: none;
@@ -222,6 +224,7 @@
     &.open::before {
       transform: rotate(45deg);
     }
+
   }
 
   .faq-answer {
@@ -235,13 +238,16 @@
   }
 
   .faq-answer-inner {
+    transform: translateY(-10px);
     overflow: hidden;
   }
 
   .faq-answer-content {
     background-color: whitesmoke;
-    border-radius: 0 0 10px 10px;
+    border-radius: 0 0 5px 5px;
     padding: 20px;
+    padding-top: 40px;
+    margin-top: -8px;
     color: #2e2e2e;
     font-weight: 500;
 
