Tons of style changes

--- a/src/App.scss
+++ b/src/App.scss
@@ -226,8 +226,7 @@ select:focus {
 
 .bodySection {
   width: 100%;
-  background-color: #b33d3d;
-  //#9E8683
+  background-color: #2a2530;
 }
 
 .bodyPadding {
