--- a/src/components/BodyPanel/bodyPanel.scss
+++ b/src/components/BodyPanel/bodyPanel.scss
@@ -1,13 +1,87 @@
-.basicPanel {
-  color: whitesmoke;
-  padding: 15px;
-  flex-direction: column;
+// Textured background container
+.textured-background {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+}
 
-  .bodyTitle {
-    font-weight: 800;
-    font-size: 30px;
-    margin: 10px;
-  }
+// Background texture layers (behind content)
+.texture-layer {
+  position: absolute;
+  left: 0;
+  right: 0;
+  background-repeat: repeat;
+  background-size: 64px 64px;
+  image-rendering: pixelated;
+}
+
+.texture-layer.texture-dirt {
+  background-color: #8b6b4a;
+  top: 0;
+  z-index: 0;
+}
+
+.texture-layer.texture-cobblestone {
+  background-color: #7a7a7a;
+  z-index: 1;
+}
+
+.texture-layer.texture-blackstone {
+  background-color: #2a2530;
+  z-index: 2;
+}
+
+// Container for blend tiles
+.tile-blend-container {
+  position: absolute;
+  left: 0;
+  right: 0;
+  height: 192px;
+  pointer-events: none;
+  z-index: 3;
+  overflow: visible;
+}
+
+// Individual blend tiles
+.blend-tile {
+  position: absolute;
+  width: 64px;
+  background-size: 64px 64px;
+  background-repeat: repeat;
+  image-rendering: pixelated;
+}
+
+// Content layer (above backgrounds)
+.content-layer {
+  position: relative;
+  z-index: 10;
+}
+
+// Body panels (content only, no background)
+.bodyPanel {
+  color: whitesmoke;
+  padding: 40px 0;
+  flex-direction: column;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.bodyPanel > .flexRow,
+.bodyPanel > .flexCol {
+  width: 92%;
+  max-width: 1600px;
+  background: rgba(0, 0, 0, 0.55);
+  border-radius: 8px;
+  padding: 25px 30px;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+}
+
+.bodyPanel .bodyTitle {
+  font-weight: 800;
+  font-size: 30px;
+  margin: 10px;
 }
 
 .slide-from-right-hidden {
