--- a/src/components/CopyWidget/copyWidget.scss
+++ b/src/components/CopyWidget/copyWidget.scss
@@ -5,20 +5,32 @@
 
 .copyContainer {
   display: inline-block;
-  padding: 8px 12px;
+  padding: 10px 16px;
   text-align: center;
   text-decoration: none;
   z-index: 1;
   cursor: pointer;
   animation: pulse-container 1s ease-in-out infinite;
+  overflow: visible;
 
-  box-shadow: 0px 0px 3px 1px rgba(255, 255, 255, 0.1) inset;
-  border-radius: 1px;
-  border: 0px solid #335717;
-  border-bottom-width: 2px;
+  background: linear-gradient(180deg, #4cd137 0%, #44bd32 50%, #3aa528 100%);
+  box-shadow:
+    inset 0 1px 0 rgba(255, 255, 255, 0.3),
+    inset 0 -1px 0 rgba(0, 0, 0, 0.2),
+    0 3px 8px rgba(0, 0, 0, 0.3);
+  border-radius: 4px;
+  border: 2px solid #2d8a1e;
+  border-bottom-width: 3px;
+  position: relative;
+  transition: background 0.2s ease-out, box-shadow 0.2s ease-out;
 
   &:hover {
     animation-duration: 0.5s;
+    background: linear-gradient(180deg, #5ae044 0%, #4cd137 50%, #44bd32 100%);
+    box-shadow:
+      inset 0 1px 0 rgba(255, 255, 255, 0.4),
+      inset 0 -1px 0 rgba(0, 0, 0, 0.2),
+      0 0 18px rgba(76, 209, 55, 0.6);
   }
 
   .copyButton {
@@ -29,15 +41,19 @@
     height: 100%;
     font-size: calc(0.7rem + 0.7vw);
 
+    p {
+      margin: 0;
+    }
+
     img {
       position: relative;
       top: 0;
     }
 
     .divider {
-      margin: 0 7px;
+      margin: 0 10px;
       border-left: 1px solid;
-      border-color: rgba(0, 0, 0, 0.3);
+      border-color: rgba(255, 255, 255, 0.3);
       height: 1em;
     }
 
@@ -53,11 +69,14 @@
   font-size: calc(0.5rem + 0.4vw);
   font-weight: 600;
   color: white;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
+  letter-spacing: 0.5px;
 }
 
 .copyVersion {
   margin: 2px 0 0 0;
   font-size: calc(0.5rem + 0.3vw);
-  opacity: 0.8;
+  opacity: 0.9;
   color: white;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
 }
