--- a/src/components/Tooltip/tooltip.scss
+++ b/src/components/Tooltip/tooltip.scss
@@ -10,6 +10,7 @@
   visibility: hidden;
   opacity: 0;
   pointer-events: none;
+  transition: opacity 0.15s ease-out, visibility 0.15s ease-out;
 }
 
 /* Position tooltip above the element */
@@ -18,35 +19,34 @@
   bottom: calc(100% + 10px);
   left: 50%;
   margin-left: -80px;
-  padding: 7px;
+  padding: 8px 12px;
   width: 160px;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-  background-color: #000;
-  background-color: hsla(0, 0%, 23%, 0.95);
-  color: #fff;
+  border-radius: 4px;
+  background: linear-gradient(180deg, #2d2d2d 0%, #222222 100%);
+  border: 1px solid #151515;
+  box-shadow: 0 3px 8px rgba(0, 0, 0, 0.4);
+  color: #e0e0e0;
   content: attr(data-tooltip);
   text-align: center;
   font-size: 14px;
+  font-weight: 500;
   line-height: 1.2;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
 
 /* Triangle hack to make tooltip look like a speech bubble */
 [data-tooltip]:after {
   position: absolute;
-  bottom: calc(100% + 10px);
+  bottom: calc(100% + 5px);
   left: 50%;
-  margin-bottom: -5px;
+  margin-left: -6px;
   width: 0;
-  border-top: 5px solid #000;
-  border-top: 5px solid hsla(0, 0%, 23%, 0.95);
-  border-right: 5px solid transparent;
-  border-left: 5px solid transparent;
+  border-top: 6px solid #222222;
+  border-right: 6px solid transparent;
+  border-left: 6px solid transparent;
   content: ' ';
   font-size: 0;
   line-height: 0;
-  z-index: -5;
 }
 
 /* Show tooltip content on hover */
